--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777;
-    background: url("../images/full-bloom.png");
+    background: url("../images/shl.png");
   }
   
   * {
@@ -77,14 +77,14 @@ body {
   h3 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #808080;
   }
   
   h1 {
     padding-bottom: 20px;
     font-size: 30px;
     line-height: 49px;
-    border-bottom: 3px solid #ddd;
+    border-bottom: 3px solid #4682B4;
   }
   
   h2,
@@ -101,8 +101,8 @@ body {
     margin: 0 0 30px;
     overflow: auto;
     color: #fff;
-    background: #fff;
-    border-bottom: 2px solid #ccc;
+    background: #666;
+    border-bottom: 2px solid #4682B4;
   }
   
   #logo {
@@ -116,7 +116,7 @@ body {
     color: #fff;
     text-align: center;
     text-decoration: none;
-    background: #4aaaa5;
+    background: #808080;
   }
   
   nav {
@@ -148,7 +148,7 @@ body {
     color: #ccc;
     text-align: center;
     background: #666;
-    border-top: 8px solid #4aaaa5;
+    border-top: 8px solid #4682B4;
   }
   
   /* sidebar */
@@ -168,7 +168,7 @@ body {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid #eee;
+    border-bottom: 2px solid #4682B4;
   }
   
   .social {
@@ -234,7 +234,7 @@ body {
     font-size: 18px;
     color: #fff;
     cursor: pointer;
-    background: #4aaaa5;
+    background: #808080;
     border: 0 none;
   }
   
